# seq

./: .ghci.repl  LICENSE  README.md  hie.yaml  seq.cabal
script/: ghci-flags  repl
src/: Seq.hs
src/Seq/: Class.hs  Doc.hs  Eval.hs  Name.hs  Norm.hs  Pattern.hs  Print.hs  Typed.hs  Types.hs  Untyped.hs
src/Seq/Eval/: Typed.hs
src/Seq/Print/: Typed.hs  Untyped.hs
src/Seq/Untyped/: Class.hs  Norm.hs  Polarized.hs  Syntax.hs
