cabal-version:      2.4
name:               seq
version:            0.0.0.0
synopsis:           Sequent calculus
description:        A sequent calculus for no good reason

homepage:           https://github.com/robrix/seq
bug-reports:        https://github.com/robrix/seq/issues

license:            BSD-3-Clause
license-file:       LICENSE

author:             Rob Rix
maintainer:         rob.rix@me.com

copyright:          2022 Rob Rix

category:           Language
extra-source-files:
  CHANGELOG.md
  README.md

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies
  if (impl(ghc >= 8.10))
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  if (impl(ghc >= 9.2))
    ghc-options:
      -Wno-missing-kind-signatures

library
  import:         common
  exposed-modules:
    Seq.Doc
    Seq.Eval.Typed
    Seq.Print.Typed
    Seq.Typed
  build-depends:
    , base ^>=4.16.0.0
  hs-source-dirs:   src
